Added search fucntionality
