# StoriesService/static/api.yaml
@@ -131,7 +131,6 @@ paths:
           description: Story doesn't contain all the words or it is too long
         '201':
           description: Draft created / Draft updated / Draft has been published / Story has been published
-
   /stories/stats/{user_id}:
     get:
       summary: Get the statistics for a specific user
@@ -149,7 +148,6 @@ paths:
           description: Errors in requestbody
         '200':
           description: Statistics of stories for a given user
-
   /stories/delete/{id_story}:
     post:
       summary: Delete the story specified by story id
@@ -169,7 +167,21 @@ paths:
           description: Request is invalid, check if you are the author of the story and the id is a valid one
         '200':
           description: Story has been deleted
-
+  /search:
+    get:
+      summary: Return the list of all matching stories
+      operationId: search
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: A JSON array of JSON objects containing stories list
+          schema: 
+            type: array
+            items: 
+              $ref: '#/definitions/story'
+        '400':
+          description: Error with query parameter
 definitions:
   story:
     type: object
@@ -204,3 +216,4 @@ definitions:
       user_id:
         type: integer
         description: the author of the story
+        
